2010-12-07 Tue  Jari Aalto  <jari.aalto@cante.net>

        * tiny/tinylib.el
	(top level): Convert all 10+ years old macro definitions
	to modern style.
	(ti::package-version-info): adjust docstring.
        (ti::package-get-header): Move location.
        (ti::file-complete-filename-minibuffer-macro): Modernize.
        (ti::process-perl-process-environment-macro): Modernize.
        (ti::macrov-minor-mode): Modernize.
        (ti::macrov-minor-mode-1): Modernize.
        (ti::macrof-minor-mode-1): Modernize.
        (ti::macrof-minor-mode-on): Modernize.
        (ti::macrof-minor-mode-off): Modernize.
        (ti::macrof-minor-mode-help): Modernize.
        (ti::macrof-minor-mode-commentary): Modernize.
        (ti::macrof-minor-mode-viper-attach): Modernize.
        (ti::macrof-minor-mode-install): Modernize.
        (ti::macrof-minor-mode-install-1): Modernize.
        (ti::macrof-define-keys): Modernize.
        (ti::macrov-mode-line-mode-menu): Modernize.
        (ti::macrof-define-keys-1): Modernize.
        (ti::macrof-define-keys-1): Modernize.
        (ti::macrof-version-bug-report-1): Modernize.
        (ti::macrof-version-bug-report): Modernize.
        (ti::macrof-debug-1): Modernize.
        (ti::macrof-debug-lowlevel): Modernize.
        (ti::macrof-debug-standard): Modernize.
        (ti::macrof-install-pgp-tar-1): Modernize.
        (ti::macrof-install-pgp-tar): Modernize.
        (ti::macrof-minor-mode-wizard): Modernize.

2010-12-06 Mon  Jari Aalto  <jari.aalto@cante.net>

        * tiny/tinyepkg.el: Remove. Moved to separate project
        under name epackage.el. See
        http://freshmeat.net/projects/emacs-epackage

        * tiny/tinylibw.el (w32-cygwin-convert): Use plain `let'.

2010-12-04  Jari Aalto  <jari.aalto@cante.net>

        * tiny/tinysearch.el: (tinysearch-install-default-keybindings):
        Check `global-map' before binding keys.

2010-12-03  Jari Aalto  <jari.aalto@cante.net>
